@@ -164,38 +164,47 @@ name|Math
 operator|.
 name|min
 argument_list|(
+name|calculateRatioOrMaxValue
+argument_list|(
 name|available
-operator|.
-name|getMemory
-argument_list|()
-operator|/
-name|required
 operator|.
 name|getMemory
 argument_list|()
 argument_list|,
+name|required
+operator|.
+name|getMemory
+argument_list|()
+argument_list|)
+argument_list|,
+name|calculateRatioOrMaxValue
+argument_list|(
 name|available
 operator|.
 name|getVirtualCores
 argument_list|()
-operator|/
+argument_list|,
 name|required
 operator|.
 name|getVirtualCores
 argument_list|()
 argument_list|)
+argument_list|)
 return|;
 block|}
 return|return
+name|calculateRatioOrMaxValue
+argument_list|(
 name|available
 operator|.
 name|getMemory
 argument_list|()
-operator|/
+argument_list|,
 name|required
 operator|.
 name|getMemory
 argument_list|()
+argument_list|)
 return|;
 block|}
 DECL|method|divideAndCeilContainers (Resource required, Resource factor, EnumSet<SchedulerResourceTypes> resourceTypes)
@@ -275,6 +284,38 @@ operator|.
 name|getMemory
 argument_list|()
 argument_list|)
+return|;
+block|}
+DECL|method|calculateRatioOrMaxValue (int numerator, int denominator)
+specifier|private
+specifier|static
+name|int
+name|calculateRatioOrMaxValue
+parameter_list|(
+name|int
+name|numerator
+parameter_list|,
+name|int
+name|denominator
+parameter_list|)
+block|{
+if|if
+condition|(
+name|denominator
+operator|==
+literal|0
+condition|)
+block|{
+return|return
+name|Integer
+operator|.
+name|MAX_VALUE
+return|;
+block|}
+return|return
+name|numerator
+operator|/
+name|denominator
 return|;
 block|}
 block|}
